added new images to boards and other minor tweaks

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       <div class="boards hidden">
         <div class="board short"><img src="./images/shortBoard.png" alt="" /><h2>Short Board</h2></div>
-        <div class="board long"><img src="./images/shortBoard.png" alt="" /><h2>Long Board</h2></div>
-        <div class="board boogie"><img src="./images/shortBoard.png" alt="" /><h2>Boogie Board</h2></div>
+        <div class="board long"><img src="./images/longBoard.jpg" alt="" /><h2>Long Board</h2></div>
+        <div class="board boogie"><img src="./images/boogieBoard.jpg" alt="" /><h2>Boogie Board</h2></div>
       </div>
       <div class="location hidden">
         <div class="surfSpot jbayThumb"><img src="./images/jbay.jpg" alt="" /><h2>J Bay</h2></div>
